# traitprint

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMING_SOON.md  LICENSE  README.md  manifest  pyproject.toml
.beads/: config.yaml  metadata.json
.github/workflows/: ci.yml  publish.yml
.runtime/: session_id
data/: taxonomy.json
docs/: privacy.md  why-local.md
src/traitprint/: __init__.py  cli.py  cloud.py  credentials.py  export.py  git_ops.py  mcp_server.py  mining.py  schema.py  sync.py  taxonomy.py  vault.py
src/traitprint/data/: __init__.py  taxonomy.json
src/traitprint/exporters/: __init__.py  synthpanel.py
src/traitprint/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  openrouter.py  pricing.py
tests/: test_cli_sync.py  test_credentials.py  test_export.py  test_export_synthpanel.py  test_init.py  test_mcp_server.py  test_mining.py  test_providers.py  test_schema.py  test_sync.py  test_vault_crud.py  test_vault_resolution.py
